--- a/src/main/resources/templates/usr/answer/top/result.html
+++ b/src/main/resources/templates/usr/answer/top/result.html
@@ -10,5 +10,8 @@
     <div th:replace="~{usr/answer/fragment/result/title :: title(${question})}"></div>
     <div th:replace="~{usr/answer/fragment/result/quecon :: content(${question})}"></div>
     <div th:replace="~{usr/answer/fragment/result/content :: content(${answer})}"></div>
+
+    <!-- 뒤로 가는 버튼 -->
+    <a href="javascript:history.back()" class="btn btn-primary mt-3">뒤로 가기</a>
 </div>
 </html>
