chore : 아이콘으로 대체 및 자잘한 수정 (#70)
* feat : Answer Entity 필드 생성 완료

* chore : 간격 수정

* 충돌 해결

* chore : 오류 수정

* rebase 오류 제거

* feat :answerService ì 추가

* chore: 아직 question을 제외하고 service 구현

* rebase

* rebase2

* chore: 전체적인 수정

* chore : create 이름 수정

* chore : 주석 추가

* feat : AnswerController ê에 간단한 form 추가

* refactor : Answer Entity 추가 및 AnswerSerivce 수정 진행

* refactor : 생성 부분 테스트 완료

* test

* refactor : baseEntity 적용 및 AnswerEntity Member 추가

* chore :주석 추가

* feat :AnswerController CreateCheckAnswer 추가

* feat : AnswerController 쪽 틀 생성

* feat : Controller -> update,delete 추가

* feat : Controller -> ShowUpdateAnswer 추가

* feat : 정답 제출용 폼 추가

* feat : 정답 폼 추가

* chore : 자잘한 수정 Mapping 수정

* chore : 자잘한 수정

* feat : mcq form 추가 및 mcq 처리 추가

* refactor : AnswerCheck 추가 후 전체 수정

* feat : QuizAnswer Controller 추가

* refactor : PostMapping  수정

* test: testcase checkAnswer 검증 완료

* refactor : RequestParam 추가 및 Service ê° 객관식 수정

* refactor : RequestParam 추가 및 Service ê° 객관식 수정

* ??

* chore : quiz url ì수정

* refactor : 중복문제 정답 등록시 또 등록이 되징않게 수정

* 충돌해결

* refactor : 정답을 등록했을경우 수정형식으로 정답이 바뀌게

* chore : 오타 수정

* before

* chore : AnswerCheck에 LAZY 추가

* refactor : 객관식 정답 등록시 내가 번호에 적은 값이 을 선택하게

* feat : quiz result 결과창 만들기

* chore : answer result 수정

* chore : answer result html 수정

* chore : result 자잘한 수정

* chore : addAnswerCheck 추가하여여 양방향관계 추가

* chore : 객관식에도 추가

* pr

* feat : 퀴즈 ì 정답부분 전체 수정 및 추가

* fix : 충돌 수정

* check

* chore : 아이콘으로 대체 및 자잘한 수정

* fix : 충돌 문제 해결

* refactor : 뒤로가기버튼 추가

* chore : findByMemberIdAndResult 추가

* fix : 오류수정

--- a/src/main/resources/templates/usr/answer/fragment/result/quetie.html
+++ b/src/main/resources/templates/usr/answer/fragment/result/quetie.html
@@ -1,3 +1,4 @@
-<div th:fragment="quetie(question) " class="rating rating-xs">
-    <p class="mb-5" th:text="${question.category.name}"></p>
+<div th:fragment="quetie(question) " >
+    <p class="mb-5" th:text="${question.name}"></p>
+
 </div>
