--- a/src/main/resources/templates/usr/answer/fragment/list/table.html
+++ b/src/main/resources/templates/usr/answer/fragment/list/table.html
@@ -1,40 +1,56 @@
-<table th:fragment="table(answerList,questions)"
-       class="mt-5 table w-full">
+<table th:fragment="table(answerList,questions)" class="mt-5 table w-125">
 
     <thead>
+    <tr class="hover flex justify-between">
+        <th class="grow">문제 번호</th>
+        <th class="w-25">문제명</th>
+        <th class="w-25">카테고리</th>
+        <th class="w-25">정답유무</th>
+        <th class="w-25">문제유형</th>
+    </tr>
     </thead>
 
+
     <tbody>
-    <tr class="hover flex"
+    <tr class="hover flex justify-between"
         th:each="answer, loop : ${answerList}"
         th:object="${answer}">
-        <td>
+
+        <td class="grow">
             <a th:text="${loop.count}"
-               th:href="@{/answer/result/{id}(id=*{id})}"></a>
+               th:href="@{/answer/result/{id}(id=${loop.count})}">
+            </a>
         </td>
 
-        <td class="w-24">
-            <a
-               th:href="@{/answer/result/{id}(id=*{id})}">
+        <td class="w-25">
+            <a th:href="@{/answer/result/{id}(id=${loop.count})}">
                 <div th:replace="~{usr/answer/fragment/result/quetie :: quetie(${answer.question})}"></div>
             </a>
         </td>
 
-        <td class="grow">
-            <a th:href="@{/answer/result/{id}(id=*{id})}">
-                <div th:replace="~{usr/question/fragment/detail/difficulty :: difficulty(${answer.question})}"></div>
-            </a>
-        </td>
-
-        <td class="grow">
-            <a th:href="@{/answer/result/{id}(id=*{id})}">
-                <span th:text="${answer.result}"> </span>
-            </a>
-        </td>
-
-        <td>
+        <td class="w-25">
             <a
-               th:href="@{/question/detail/{id}(id=*{id})}">
+                    th:href="@{/answer/result/{id}(id=${loop.count})}">
+                <div th:replace="~{usr/answer/fragment/result/quecate :: quecate(${answer.question})}"></div>
+            </a>
+        </td>
+
+        <td class="w-25">
+            <a th:href="@{/answer/result/{id}(id=${loop.count})}">
+                <div class="flex items-center">
+                    <span  th:if="${answer.result == '정답'}">
+                        <i class="fa-solid fa-check fa-xl " style="color: #00ff33;"></i>
+                    </span>
+                    <span th:if="${answer.result != '정답'}">
+                        <i class="fa-solid fa-xmark fa-xl " style="color: #ff0000;"></i>
+                    </span>
+                </div>
+            </a>
+        </td>
+
+        <td class="w-25">
+            <a
+                    th:href="@{/answer/result/{id}(id=${loop.count})}">
                 <div th:replace="~{usr/answer/fragment/result/quetype :: quetype(${answer.question})}"></div>
             </a>
         </td>
