--- a/src/main/resources/templates/usr/answer/fragment/result/quecon.html
+++ b/src/main/resources/templates/usr/answer/fragment/result/quecon.html
@@ -1,8 +1,17 @@
-<div th:fragment="content(question)"
+<div th:fragment="content(question,answer)"
      class="card w-80 bg-base-100 shadow-xl mt-5">
 
     <div class="card-body">
         <p class="py-6" th:text="${question.content}"></p>
+
+        <div th:if="${question.type.toString() eq 'MCQ'}"
+             th:each="choice, roop : ${question.choiceList}"
+             class="form-control">
+            <label class="label cursor-pointer">
+                <span class="label-text" th:text="|${roop.count}.  ${choice.choice}|"></span>
+                <input type="radio" name="radio-10" class="radio checked:bg-red-500" th:checked="${choice.number eq answer.content}" disabled/>
+            </label>
+        </div>
     </div>
 
 </div>
