design: 내가 만든 문제 목록 디자인

--- a/src/main/resources/templates/usr/member/question.html
+++ b/src/main/resources/templates/usr/member/question.html
@@ -5,10 +5,31 @@
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
 
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
-    <div th:each="question : ${questions}">
-        <span th:text="${question.id}"></span>
-        <span th:text="${question.content}"></span>
+    <div class="collapse w-full sm:max-w-md" th:each="question : ${questions}">
+        <input type="checkbox" class="peer" />
+        <div class="flex collapse-title bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content">
+            <span class="badge badge-sm badge-error mr-1" th:text="${question.id} "></span>
+            <span th:text="${question.name}"></span>
+            <div class="ml-auto">
+                <span class="badge badge-sm" th:text="${question.category.name}"></span>
+                <span class="badge badge-sm" th:if="${question.type.toString() == 'MCQ'}">객관식</span>
+                <span class="badge badge-sm" th:if="${question.type.toString() == 'SAQ'}">주관식</span>
+            </div>
+        </div>
+        <div class="collapse-content bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content">
+            <span class="badge mb-3">문제</span>
+            <p class="mb-5" th:text="${question.content}"></p>
+            <div class="mb-5" th:if="${question.type.toString() == 'MCQ'}">
+                <span class="badge mb-3">선택지</span>
+                <p th:text="${question.choiceList.get(0).choice}"></p>
+                <p th:text="${question.choiceList.get(1).choice}"></p>
+                <p th:text="${question.choiceList.get(2).choice}"></p>
+            </div>
+        </div>
     </div>
+
+    <div class="mt-5"></div>
+    <div class="mt-5"></div>
 
 </div>
 </html>
