feat: 맞은 문제 목록, 틀린 문제 목록 추가

--- a/src/main/resources/templates/usr/member/mypage.html
+++ b/src/main/resources/templates/usr/member/mypage.html
@@ -146,8 +146,8 @@
                 <span>문제</span>
             </li>
             <li><a href="/member/underlinedQuestionList">밑줄 친 문제 목록</a></li>
-            <li><a href="#">맞은 문제 목록</a></li>
-            <li><a href="#">틀린 문제 목록</a></li>
+            <li><a href="/member/correctList">맞은 문제 목록</a></li>
+            <li><a href="/member/incorrectList">틀린 문제 목록</a></li>
             <li><a href="/member/myQuestionList">내가 만든 문제 목록</a></li>
             <li class="menu-title mt-3">
                 <span>게시판</span>
