--- a/src/main/resources/templates/usr/member/incorrect.html
+++ b/src/main/resources/templates/usr/member/incorrect.html
@@ -1,6 +1,6 @@
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 
-<head><title>맞은 문제 목록</title></head>
+<head><title>틀린 문제 목록</title></head>
 
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
 
