--- a/src/main/resources/templates/usr/post/edit.html
+++ b/src/main/resources/templates/usr/post/edit.html
@@ -4,7 +4,7 @@
 </head>
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
   <h1 class="text-2xl font-bold mb-4">게시글 수정</h1>
-  <form th:action="@{/community/edit/{id}(id=${post.id})}" method="post">
+  <form th:action="@{/post/edit/{id}(id=${post.id})}" method="post">
     <input type="hidden" name="_method" value="PUT">
     <input type="hidden" name="_csrf" value="${_csrf.token}">
     <div class="article-write__box p-10">
@@ -25,7 +25,7 @@
     </div>
     <div class="btns flex justify-end gap-x-[10px]">
       <button class="btn btn-primary" type="submit">수정</button>
-      <a class="btn btn-secondary" href="/community/view/{id}(id=${post.id})">취소</a>
+      <a class="btn btn-secondary" href="/post/view/{id}(id=${post.id})">취소</a>
     </div>
   </form>
 </div>
