--- a/src/main/resources/templates/usr/post/list.html
+++ b/src/main/resources/templates/usr/post/list.html
@@ -34,7 +34,7 @@
         </tr>
         </tbody>
     </table>
-    <a href="/community/create" class="btn btn-primary">글쓰기</a>
+    <a href="/post/create" class="btn btn-primary">글쓰기</a>
 
 
 </div>
