--- a/src/main/resources/templates/usr/post/list.html
+++ b/src/main/resources/templates/usr/post/list.html
@@ -2,12 +2,6 @@
 <head>
     <title>게시글 리스트 페이지</title>
     <style>
-        .btn-primary {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-        }
-
         table {
             width: 100%;
             table-layout: fixed;
@@ -40,7 +34,7 @@
         </tr>
         </tbody>
     </table>
-    <a href="/community/create" class="btn btn-primary">글쓰기</a>
+    <a href="/post/create" class="btn btn-primary">글쓰기</a>
 
 
 </div>
