feat : 정답 부분 수정

--- a/src/main/resources/templates/usr/answer/fragment/result/solution.html
+++ b/src/main/resources/templates/usr/answer/fragment/result/solution.html
@@ -4,7 +4,7 @@
 
     <div class="card-body">
         <span class="badge mb-3">문제 정답</span>
-        <p th:text="${answerCheck.content}"></p>
+        <span th:text="${(answerCheck.MCQContent() + 1) + '' + '번'}"></span>
     </div>
 </div>
 
