--- a/src/main/resources/templates/usr/question/fragment/detail/nav.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/nav.html
@@ -7,12 +7,16 @@
     </div>
 
     <div class="flex justify-center mt-3 mb-10 gap-5">
+
         <a th:href="@{/question/list/{id}(id=${question.category.id})}">
             <i class="fa-solid fa-chevron-left"></i></a>
 
         <span th:replace="~{usr/question/fragment/detail/underline :: underline(${question})}"></span>
 
         <span><i class="fa-regular fa-comment"></i></span>
-    </div>
 
+        <a th:href="@{/question/update/{id}(id=${question.id})}">
+            <i class="fa-regular fa-pen-to-square"></i></a>
+
+    </div>
 </div>
