feat: question 삭제 구현 / test  완료

--- a/src/main/resources/templates/usr/question/fragment/detail/nav.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/nav.html
@@ -20,5 +20,13 @@
             <i th:if="${question.member.id eq @rq.member.id}"
                class="fa-regular fa-pen-to-square"></i></a>
 
+        <a th:if="${@rq.isLogin()}"
+           href="javascript:" onclick="$(this).next().submit();">
+            <i th:if="${question.member.id eq @rq.member.id}"
+               class="fa-regular fa-trash-can"></i></a>
+
+        <form class="!hidden" hidden  method="POST"
+              th:action="@{/question/{id}(id=${question.id})}"></form>
+
     </div>
 </div>
