--- a/src/main/resources/templates/usr/question/top/list.html
+++ b/src/main/resources/templates/usr/question/top/list.html
@@ -2,7 +2,7 @@
 
 <head><title th:text="|${category.name} 문제 목록|"></title></head>
 
-<div layout:fragment="content" class="min-h-screen flex flex-col">
+<div layout:fragment="content" class="min-h-screen flex flex-col mb-12">
 
     <div th:text="${category.about}" class="ml-10"></div>
 
@@ -13,7 +13,7 @@
     <form th:replace="~{usr/question/fragment/list/table :: table(${category}, ${mcq})}"></form>
 
     <div th:if="${@rq.login}"
-         class="flex justify-end">
+         class="flex justify-end mb-12 mt-5">
         <a th:if="${@rq.member.role ne role}"
            th:href="@{/question/create/{id}(id=${category.id})}"><i class="fa-regular fa-pen-to-square mr-5"></i></a>
     </div>
