--- a/src/main/resources/templates/usr/question/fragment/detail/nav.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/nav.html
@@ -1,4 +1,4 @@
-<div th:fragment="nav(tags)"
+<div th:fragment="nav(tags, question)"
      class="mb-12 flex flex-col gap-5">
 
     <div class="flex justify-center mt-5">
@@ -7,12 +7,26 @@
     </div>
 
     <div class="flex justify-center mt-3 mb-10 gap-5">
+
         <a th:href="@{/question/list/{id}(id=${question.category.id})}">
             <i class="fa-solid fa-chevron-left"></i></a>
 
         <span th:replace="~{usr/question/fragment/detail/underline :: underline(${question})}"></span>
 
         <span><i class="fa-regular fa-comment"></i></span>
-    </div>
 
+        <a th:if="${@rq.isLogin()}"
+           th:href="@{/question/update/{id}(id=${question.id})}">
+            <i th:if="${question.member.id eq @rq.member.id}"
+               class="fa-regular fa-pen-to-square"></i></a>
+
+        <a th:if="${@rq.isLogin()}"
+           href="javascript:" onclick="$(this).next().submit();">
+            <i th:if="${question.member.id eq @rq.member.id}"
+               class="fa-regular fa-trash-can"></i></a>
+
+        <form class="!hidden" hidden  method="post"
+              th:action="@{/question/delete/{id}(id=${question.id})}"></form>
+
+    </div>
 </div>
