--- a/src/main/resources/templates/usr/answer/fragment/result/quecate.html
+++ b/src/main/resources/templates/usr/answer/fragment/result/quecate.html
@@ -1,3 +1,3 @@
-<div th:fragment="quecate(question) " class="rating rating-xs">
-    <p class="mb-5" th:text="${question.category.name}"></p>
+<div th:fragment="quecate(answerDto) " class="rating rating-xs">
+    <p class="mb-5" th:text="${answerDto.categoryName}"></p>
 </div>
