--- a/src/main/resources/templates/usr/answer/fragment/result/quetie.html
+++ b/src/main/resources/templates/usr/answer/fragment/result/quetie.html
@@ -1,4 +1,4 @@
-<div th:fragment="quetie(question) " >
-    <p class="mb-5" th:text="${question.name}"></p>
+<div th:fragment="quetie(answerDto) " >
+    <p class="mb-5" th:text="${answerDto.name}"></p>
 
 </div>
