--- a/src/main/resources/templates/usr/answer/fragment/result/quetype.html
+++ b/src/main/resources/templates/usr/answer/fragment/result/quetype.html
@@ -1,3 +1,3 @@
-<div th:fragment="quetype(question) " class="rating rating-xs">
-    <p th:text="${question.type.toString() == 'MCQ' ? '객관식' : '주관식'}"></p>
+<div th:fragment="quetype(answerDto) " class="rating rating-xs">
+    <p th:text="${answerDto.type.toString() == 'MCQ' ? '객관식' : '주관식'}"></p>
 </div>
