--- a/src/main/resources/templates/usr/answer/top/result.html
+++ b/src/main/resources/templates/usr/answer/top/result.html
@@ -1,13 +1,13 @@
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 
-<head><title>퀴즈 결과</title>
+<head><title>정답 결과</title>
 
 </head>
 
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-5 bg-base-200 mb-12">
     <div class="mt-5"/>
     <!-- 뒤로 가는 버튼 -->
-    <a href="javascript:history.back()" class="btn btn-primary mt-3">뒤로 가기</a>
+    <a href="javascript:history.back()" class="btn btn-primary mb-5">뒤로 가기</a>
 
     <!--
     문제 이름
