docs: app 아이콘 이미지 설정

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -17,6 +17,7 @@
 
     <!-- pwa sw.js 불러오기-->
     <link rel="manifest" href="/common/manifest.json" />
+    <link rel="StoreLogo.scale-400" href="/common/images/StoreLogo.scale-400.png">
 
     <!-- chart.js 불러오기 -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
