--- a/src/main/resources/templates/usr/answer/top/list.html
+++ b/src/main/resources/templates/usr/answer/top/list.html
@@ -2,15 +2,23 @@
 
 <head><title th:text="|정답 결과|"></title></head>
 
-<div layout:fragment="content" class="min-h-screen flex flex-col">
+<div layout:fragment="content" class="min-h-screen flex flex-col items-center">
 
     <form th:replace="~{usr/answer/fragment/list/table :: table(${answerDtos})}"></form>
 
-    <button onclick="toggleAnswer()" class="btn btn-primary mb-5">결과 저장하기</button>
+    <div class="flex justify-center mt-4">
+        <form id="saveForm" th:action="@{/answer/quiz/add}" method="post">
+            <button class="btn btn-neutral gap-1 mb-4" type="submit">
+                <i class="fa-regular fa-floppy-disk"></i>
+                결과 저장
+            </button>
+        </form>
 
-    <a class="btn btn-block btn-outline gap-1 mb-4" href="/">
-        홈으로 이동
-    </a>
+        <a class="btn btn-outline gap-1 mb-4 ml-4" href="/">
+            <i class="fa-solid fa-house"></i>
+            홈으로 이동
+        </a>
+    </div>
 
 </div>
 </html>
