--- a/src/main/resources/templates/usr/underline/top/list.html
+++ b/src/main/resources/templates/usr/underline/top/list.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 
-</body>
+<head><title th:text="|${category.name} 문제 목록|"></title></head>
+
+<div layout:fragment="content" class="min-h-screen flex flex-col mb-12">
+
+    <div th:text="${category.about}" class="ml-10"></div>
+
+<!--    <div class="mt-5 flex justify-center">-->
+<!--        <form th:replace="~{usr/category/fragment/list/search :: search(${questionSearchForm})}"></form>-->
+<!--    </div>-->
+
+    <form th:replace="~{usr/underline/fragment/list/table :: table(${questions}, ${mcq})}"></form>
+
+</div>
 </html>
