--- a/src/main/resources/templates/usr/underline/top/category.html
+++ b/src/main/resources/templates/usr/underline/top/category.html
@@ -4,7 +4,7 @@
 
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center">
 
-<!--    <form th:replace="~{usr/underline/fragment/list/search :: search(${questionSearchForm})}"></form>-->
+    <form th:replace="~{usr/category/fragment/list/search :: search(${questionSearchForm})}"></form>
     <table th:replace="~{usr/underline/fragment/category/table :: table(${categories})}"></table>
 
 </div>
