--- a/src/main/resources/templates/usr/answer/fragment/comments/comment.html
+++ b/src/main/resources/templates/usr/answer/fragment/comments/comment.html
@@ -11,25 +11,46 @@
                         <div th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></div>
                     </div>
                 </div>
+                <div>
+                    <a href="javascript:void(0);" class="recommend btn btn-sm btn-outline-secondary"
+                       th:data-uri="@{|/answer/vote/${answer.id}|}">
+                        추천
+                        <span class="badge rounded-pill bg-success" th:text="${#lists.size(answer.voter)}"></span>
+                    </a>
 
-                <a href="javascript:void(0);"
-                   th:if="${@rq.isLogin() and answer.member.id eq @rq.member.id}"
-                   th:data-uri="@{|/answer/delete/${answer.id}|}"
-                   class="delete btn btn-sm btn-online-secondary"
-                   th:text="삭제">
-                </a>
+                    <a href="javascript:void(0);"
+                       th:if="${@rq.isLogin() and answer.member.id eq @rq.member.id}"
+                       th:data-uri="@{|/answer/delete/${answer.id}|}"
+                       class="delete btn btn-sm btn-online-secondary"
+                       th:text="삭제">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
 
     <script type='text/javascript'>
         const delete_elements = document.getElementsByClassName("delete");
-        Array.from(delete_elements).forEach(function(element) {
-            element.addEventListener('click', function() {
-                if(confirm("정말로 삭제하시겠습니까?")) {
+        Array.from(delete_elements).forEach(function (element) {
+            element.addEventListener('click', function () {
+                if (confirm("정말로 삭제하시겠습니까?")) {
                     location.href = this.dataset.uri;
-                };
+                }
+                ;
             });
         });
+
+        const modify_elements = document.getElementsByClassName("recommend");
+        Array.from(modify_elements).forEach(function (element) {
+            element.addEventListener('click', function () {
+                if (confirm("정말로 추천하시겠습니까?")) {
+                    location.href = this.dataset.uri;
+                }
+                ;
+            });
+        });
+
+
     </script>
+
 </div>
