--- a/src/main/resources/templates/usr/post/view.html
+++ b/src/main/resources/templates/usr/post/view.html
@@ -37,13 +37,23 @@
     .btn-container .btn {
       margin-left: 10px;
     }
+
+    .comment-form {
+      margin-top: 20px;
+    }
+
+    .comment-form textarea {
+      width: 100%;
+      height: 100px;
+      margin-bottom: 10px;
+    }
   </style>
 </head>
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
   <div class="post-details">
     <h1 class="post-title" th:text="${post.title}"></h1>
     <p class="post-created" th:text="${#temporals.format(post.createdTime, 'yyyy-MM-dd HH:mm:ss')}"></p>
-    <p class="text-gray-500" th:text="${post.authorNickname}"></p>
+    <p class="text-gray-500" th:text="${post.member.username}"></p>
     <p class="post-content" th:text="${post.content}"></p>
     <div class="btn-container">
       <a th:href="@{/post/edit/{id}(id=${post.id})}" class="btn btn-primary">수정</a>
@@ -55,6 +65,35 @@
       <a href="/post/list" class="btn btn-primary">목록으로 돌아가기</a>
     </div>
   </div>
+
+    <div class="comment-list">
+      <h2>댓글</h2>
+      <ul>
+        <li th:each="comment : ${comments}">
+          <p th:text="${comment.content}"></p>
+          <p th:text="${comment.member.username}"></p>
+
+<!--          &lt;!&ndash; 댓글 수정 버튼 &ndash;&gt;-->
+<!--          <div class="comment-actions">-->
+<!--            <a th:href="@{/comment/edit/{id}(id=${comment.id})}" class="btn btn-sm btn-primary">수정</a>-->
+<!--            &lt;!&ndash; 댓글 삭제 버튼 &ndash;&gt;-->
+<!--            <form th:action="@{/comment/delete/{postId}/{commentId}(postId=${post.id}, commentId=${comment.id})}" method="post" onsubmit="return confirmDelete()">-->
+<!--              <input type="hidden" name="_method" value="DELETE">-->
+<!--              <input type="hidden" name="_csrf" value="${_csrf.token}">-->
+<!--              <button type="submit" class="btn btn-sm btn-error">삭제</button>-->
+<!--            </form>-->
+<!--          </div>-->
+        </li>
+      </ul>
+    </div>
+
+    <div class="comment-form">
+      <form th:action="@{/comment/create}" method="post">
+        <input type="hidden" name="postId" th:value="${post.id}">
+        <textarea name="content" placeholder="댓글을 입력하세요" class="textarea textarea-bordered textarea-md w-full max-w-xs" ></textarea>
+        <button type="submit" class="btn btn-primary">댓글 작성</button>
+      </form>
+    </div>
 
   <script>
     function confirmDelete() {
