--- a/src/main/resources/templates/usr/post/view.html
+++ b/src/main/resources/templates/usr/post/view.html
@@ -73,16 +73,16 @@
           <p th:text="${comment.content}"></p>
           <p th:text="${comment.member.username}"></p>
 
-<!--          &lt;!&ndash; 댓글 수정 버튼 &ndash;&gt;-->
-<!--          <div class="comment-actions">-->
-<!--            <a th:href="@{/comment/edit/{id}(id=${comment.id})}" class="btn btn-sm btn-primary">수정</a>-->
-<!--            &lt;!&ndash; 댓글 삭제 버튼 &ndash;&gt;-->
-<!--            <form th:action="@{/comment/delete/{postId}/{commentId}(postId=${post.id}, commentId=${comment.id})}" method="post" onsubmit="return confirmDelete()">-->
-<!--              <input type="hidden" name="_method" value="DELETE">-->
-<!--              <input type="hidden" name="_csrf" value="${_csrf.token}">-->
-<!--              <button type="submit" class="btn btn-sm btn-error">삭제</button>-->
-<!--            </form>-->
-<!--          </div>-->
+          <!-- 댓글 수정 버튼 -->
+          <div class="comment-actions">
+            <a th:href="@{/comment/edit/{id}(id=${comment.id})}" class="btn btn-sm btn-primary">수정</a>
+            <!-- 댓글 삭제 버튼 -->
+            <form th:action="@{/comment/delete/{postId}/{commentId}(postId=${post.id}, commentId=${comment.id})}" method="post" onsubmit="return confirmDelete()">
+              <input type="hidden" name="_method" value="DELETE">
+              <input type="hidden" name="_csrf" value="${_csrf.token}">
+              <button type="submit" class="btn btn-sm btn-error">삭제</button>
+            </form>
+          </div>
         </li>
       </ul>
     </div>
