--- a/src/main/resources/templates/usr/post/view.html
+++ b/src/main/resources/templates/usr/post/view.html
@@ -77,7 +77,7 @@
           <div class="comment-actions">
             <a th:href="@{/comment/edit/{id}(id=${comment.id})}" class="btn btn-sm btn-primary">수정</a>
             <!-- 댓글 삭제 버튼 -->
-            <form th:action="@{/comment/delete/{postId}/{commentId}(postId=${post.id}, commentId=${comment.id})}" method="post" onsubmit="return confirmDelete()">
+            <form th:action="@{/comment/delete/{id}(id=${comment.id})}" method="post" onsubmit="return confirmDelete()">
               <input type="hidden" name="_method" value="DELETE">
               <input type="hidden" name="_csrf" value="${_csrf.token}">
               <button type="submit" class="btn btn-sm btn-error">삭제</button>
