--- a/src/main/resources/templates/usr/member/mypage.html
+++ b/src/main/resources/templates/usr/member/mypage.html
@@ -152,7 +152,7 @@
             <li class="menu-title mt-3">
                 <span>게시판</span>
             </li>
-            <li><a>내가 쓴 게시글</a></li>
+            <li><a href="/member/myPostList">내가 쓴 게시글</a></li>
             <li><a>내가 쓴 답글</a></li>
             <li class="menu-title mt-3">
                 <span>통계</span>
