--- a/src/main/resources/templates/usr/answer/fragment/comments/comment.html
+++ b/src/main/resources/templates/usr/answer/fragment/comments/comment.html
@@ -3,7 +3,7 @@
          th:each="answer, loop : ${answers}"
          th:object="${answer}">
 
-        <div class="card w-96 bg-neutral text-neutral-content">
+        <div class="card bg-neutral text-neutral-content">
             <div class="card-body">
                 <div class="card-text" style="white-space: pre-line;" th:text="${answer.content}"></div>
                 <div class="d-flex justify-content-end">
