--- a/src/main/resources/templates/usr/answer/fragment/list/table.html
+++ b/src/main/resources/templates/usr/answer/fragment/list/table.html
@@ -1,4 +1,4 @@
-<table th:fragment="table(answerDtos)" class="mt-5 table w-125">
+<table th:fragment="table(answerDtos)" class="mt-5 table">
 
     <thead>
     <tr class="hover flex justify-between">
