--- a/src/main/resources/templates/usr/post/list.html
+++ b/src/main/resources/templates/usr/post/list.html
@@ -27,7 +27,7 @@
         <tr th:each="post, i: ${paging}">
             <td th:text="${paging.totalElements - (paging.number * paging.size) - i.count + 1}"></td>
             <td style="white-space: nowrap;"><a th:href="@{|/post/view/${post.id}|}" th:text="${post.title}"></a></td>
-            <td th:text="${post.member.username}"></td>
+            <td th:text="${post.member.nickname}"></td>
             <td th:text="${post.postHits}"></td>
         </tr>
         </tbody>
